# blogdoc

nginx-accept/: linux_reuseaddr.c  nginx_accept.md  windows_reuseaddr.cpp
nginx-accept/windows_rust/: Cargo.toml
nginx-accept/windows_rust/examples/: test.rs
nginx-accept/windows_rust/src/: main.rs
